# langgraph-supervisor-pattern

./: .env.example  .gitignore  AGENTS.md  README.md  question-template.json
backend/: pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/a2ui/: __init__.py  builders.py
backend/app/a2ui/catalogs/: datagov-v1.json
backend/app/api/: deps.py
backend/app/api/routes/: ag_ui.py  chat.py
backend/app/core/: config.py  kong_auth.py  llm.py  logging.py
backend/app/db/: init_db.py  session.py
backend/app/graph/: __init__.py  builder.py  faq_agents.py  parent_supervisor.py  prompts.py  router_logic.py  state.py  supervisor.py
backend/app/graph/nodes/: __init__.py  faq.py  status_check.py
backend/app/graph/subgraphs/: __init__.py
backend/app/mcp/: registry.py
backend/app/mcp/question-form-app-python/: package.json  server.py
backend/app/mcp/search-app/: mcp-app.html  package.json  (+1 more)
backend/app/models/: access_request.py  thread.py  user.py
backend/app/schema/: chat.py  mcp.py
backend/app/service/: ag_ui_service.py  chat_service.py  faq_service.py  mcp_search_client.py  search_service.py  status_service.py
backend/docs/graph/: graph_detailed.mmd  request_access_subgraph.mmd
backend/scripts/: draw_graph.py  ensure_schema.py  grant_rw_privileges.py  setup_checkpointer.py
backend/tests/: conftest.py  test_a2ui_builders.py  test_clarification_followup.py  test_faq_question_extraction.py  test_faq_simulation.py  test_mcp_search_client.py  test_narrow_search.py  test_navigation.py  test_router_logic.py  test_subgraph_flow.py
(+62 files in other folders)
